# fossil-green

./: Cargo.toml  README.md
src/: aws.rs  main.rs
