[package]
name = "fossil-green"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rusoto_ce = "0.45.0"
structopt = "0.3.1"
itertools = "0.8.2"
tokio = { version = "1.19.2", features = ["full"] }
aws-connections-lib = { git = "https://github.com/brother-wolf/aws-connections-lib", tag = "v0.0.5" }
